# hanzi_char_featurizer

./: .gitignore  DEVELOP.md  LICENSE.txt  README.md  dev_requirements.txt  example_as_tensor.py  example_code.py  makefile  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
hanzi_char_featurizer/: __init__.py
hanzi_char_featurizer/featurizers/: chaizi.py  four_corner.py  pinyin.py  pinyin_parts.py
image/: diagram.pptx
tests/: conftest.py  test_chaizi.py  test_featurizer.py  test_four_corner.py  test_pinyin.py  test_pinyin_parts.py
usage/: data.txt  four_corner_example.py  pinyin_parts_example.py
